--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ body, html {
 }
 
 .bkg{
-  animation: home 8s linear/*tempo transição*/0s/*tempoDelay*/normal/*ordem da animaçao*/ infinite/*duração*/; 
+  animation: home 8s ease-in-out/*tempo transição*/0s/*tempoDelay*/normal/*ordem da animaçao*/ infinite/*duração*/; 
   height: 100%;
   background-position: center;
   background-repeat: no-repeat;
@@ -138,7 +138,7 @@ body, html {
   color: white;
   font-weight: bold;
   border: 3px solid #f1f1f1;
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -156,7 +156,7 @@ body, html {
   background-color: rgb(0,0,0); 
   background-color: rgba(0,0,0, 0.4); 
   color: white;
-  position: absolute;
+  position: fixed;
   top:23%;
   left: 8%;
   width: 35%;
@@ -173,8 +173,8 @@ body, html {
 }
 
 .anima{
-  animation: transitions 4s linear 0s normal/*ordem da animaçao*/ infinite/*duração*/; 
-  position: absolute;
+  animation: transitions 4s ease-in-out 0s normal/*ordem da animaçao*/ infinite/*duração*/;
+  position: fixed;
   top:33%;
   right: 8%;
   width: 33%;
@@ -182,8 +182,8 @@ body, html {
 }
 
 .anima2{
-  animation: transition 4s linear/*tempo transição*/0s/*tempoDelay*/normal/*ordem da animaçao*/ infinite/*duração*/; 
-  position: absolute;
+  animation: transition 4s ease-in-out/*tempo transição*/0s/*tempoDelay*/normal/*ordem da animaçao*/ infinite/*duração*/;
+  position: fixed;
   top:23%;
   right: 15%;
   width: 33%;
@@ -212,7 +212,7 @@ body, html {
 
 /* cont. de imagens seta esq dir */
 .container {
-  position: absolute;
+  position: fixed;
   width: 33.8%;
   right: 8%;
   top: 26%;
@@ -224,6 +224,7 @@ body, html {
 .mySlides {
   display: none;
   width:100%;
+  background-size: cover;
 
 }
 
@@ -286,17 +287,18 @@ body, html {
   background-color: #444;
   padding: 5px;
   color: white;
-  width: 100%;
+  width: auto;
   font-size: 12px;
   letter-spacing: 2px;
   font-family: 'Oswald', sans-serif;
+  background-size: cover;
 }
 
 .row:after {
   content: "";
   display: table;
   clear: both;
-  width:100%;
+  width:auto;
 
 }
 
@@ -321,19 +323,23 @@ body, html {
 @keyframes transition{
   from{
     background-image: url("dese.jpeg");
+    background-size: cover;
   }
   to{
     background-image: url("about.jpg");
-    }
+    background-size: cover;
+  }
 }
 
 @keyframes transitions{
   from{
     background-image: url("about.jpg");
+    background-size: cover;
   }
   to{
     background-image: url("dese.jpeg");
-    }
+    background-size: cover;
+  }
 }
 
 @keyframes home{
@@ -342,10 +348,10 @@ body, html {
   }
   35%{
     background-image: url("bk2.jpg");
-    }
-  70%{
+  }
+  65%{
     background-image: url("bk4.jpg");
-    }
+  }
   100%{
     background-image: url("bk6.jpg");
   }
@@ -356,8 +362,7 @@ body, html {
 }
 
 .card {
-  position: absolute;
-  position: absolute;
+  position: fixed;
   top:25%;
   right: 18%;
   width: 33%;
